feat(docs): add openapi docs to auth handlers
