# docs/swagger.yaml
@@ -27,6 +27,38 @@ definitions:
       message:
         type: string
     type: object
+  dto.SignInInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  dto.SignInOutput:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
+  dto.SignUpInput:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        maxLength: 64
+        minLength: 8
+        type: string
+    required:
+    - email
+    - name
+    - password
+    type: object
 externalDocs:
   description: OpenAPI v2
   url: https://swagger.io/specification/v2/
@@ -40,6 +72,80 @@ info:
   title: go-api-boilerplate
   version: "1.0"
 paths:
+  /v1/auth/signin:
+    post:
+      consumes:
+      - application/json
+      description: Sign in and retrieve JWT token
+      parameters:
+      - description: Params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SignInInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.SignInOutput'
+        "400":
+          description: Body parsing failed
+          schema:
+            $ref: '#/definitions/dto.ErrorOutput'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/dto.ErrorOutput'
+        "422":
+          description: Request validation error
+          schema:
+            $ref: '#/definitions/dto.ErrorOutput'
+        "500":
+          description: Business/internal error
+          schema:
+            $ref: '#/definitions/dto.ErrorOutput'
+      summary: Sign in
+      tags:
+      - auth
+  /v1/auth/signup:
+    post:
+      consumes:
+      - application/json
+      description: Creates new user
+      parameters:
+      - description: Params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SignUpInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Body parsing failed
+          schema:
+            $ref: '#/definitions/dto.ErrorOutput'
+        "408":
+          description: User already exists
+          schema:
+            $ref: '#/definitions/dto.ErrorOutput'
+        "422":
+          description: Request validation error
+          schema:
+            $ref: '#/definitions/dto.ErrorOutput'
+        "500":
+          description: Business/internal error
+          schema:
+            $ref: '#/definitions/dto.ErrorOutput'
+      summary: Sign up
+      tags:
+      - auth
   /v1/counter:
     get:
       description: Increments an in-memory counter up to a limit value
